# whipping_star

./: CMakeLists.txt  README  install_deps.sh  setup.sh
HPCfunctionality/: CMakeLists.txt
HPCfunctionality/ProtoType/: CMakeLists.txt
HPCfunctionality/ProtoType/src/: CMakeLists.txt  pureeigen.cpp
examples/: CMakeLists.txt  example_1.cxx  example_2.cxx  example_3.cxx  example_test.cxx
inc/: SBNchi.h  SBNconditional.h  SBNconfig.h  SBNcovariance.h  SBNfeld.h  SBNosc.h  SBNsinglephoton.h  SBNspec.h  branch_variable.h  loghelper.h  ngrid.h  params.h  prob.h
libio/: CMakeLists.txt  denan.cxx  denan.h  eventweight_LinkDef.h
runs/make_jobs/: bash_test_template.sh  make_wilks.sh  make_wilks_apponly.sh  make_wilks_cov.sh  make_wilks_specific_cov_apponly.sh  make_wilks_using_generic_template.sh  make_wilks_using_specific_template.sh  run_all.sh  run_sins.sh  submit_gen_template.sh  submit_gen_template_specific_cov.sh  submit_test_template.sh  submit_test_template_specific_cov.sh  submit_wilks_generic_template.sh  submit_wilks_specific_template.sh
src/: CMakeLists.txt  HIVEplot.cxx  SBNchi.cxx  SBNcls.cxx  SBNconditional.cxx  SBNconfig.cxx  SBNcovariance.cxx  SBNfeld.cxx  SBNfit3pN.cxx  SBNgenerate.cxx  SBNosc.cxx  SBNsinglephoton.cxx  SBNspec.cxx  prob.cxx
tinyxml/: CMakeLists.txt
unit/: CMakeLists.txt  unit1.cxx  unit2.cxx
xml/: icarus_numi_wirecell_apponly_split_overlay_intrinsic.xml  icarus_numi_wirecell_split_overlay_intrinsic.xml  icarus_uboone_numi_wirecell_apponly_split_overlay_intrinsic.xml  icarus_uboone_numi_wirecell_split_overlay_intrinsic.xml  icarus_uboone_wirecell_apponly_split_overlay_intrinsic.xml  icarus_uboone_wirecell_split_overlay_intrinsic.xml  icarus_wirecell_apponly_split_overlay_intrinsic.xml  icarus_wirecell_split_overlay_intrinsic.xml  sbn_uboone_numi_wirecell_apponly_split_overlay_intrinsic.xml  sbn_uboone_numi_wirecell_split_overlay_intrinsic.xml  sbn_uboone_wirecell_apponly_split_overlay_intrinsic.xml  sbn_uboone_wirecell_split_overlay_intrinsic.xml  sbnd_icarus_numi_wirecell_apponly_split_overlay_intrinsic.xml  sbnd_icarus_numi_wirecell_split_overlay_intrinsic.xml  sbnd_icarus_wirecell_apponly_split_overlay_intrinsic.xml  sbnd_icarus_wirecell_split_overlay_intrinsic.xml  sbnd_numi_wirecell_apponly_split_overlay_intrinsic.xml  sbnd_numi_wirecell_split_overlay_intrinsic.xml  sbnd_wirecell_apponly_split_overlay_intrinsic.xml  sbnd_wirecell_split_overlay_intrinsic.xml  uboone_numi_wirecell.xml  uboone_numi_wirecell_apponly_split_overlay_intrinsic.xml  uboone_numi_wirecell_apponly_split_overlay_intrinsic_max8GeV.xml  uboone_numi_wirecell_split_overlay_intrinsic.xml  uboone_numi_wirecell_split_overlay_intrinsic_max8GeV.xml  uboone_uboone_numi_wirecell_apponly.xml  uboone_wirecell_apponly_split_overlay_intrinsic.xml  uboone_wirecell_split_overlay_intrinsic.xml
xml/.ipynb_checkpoints/: icarus_uboone_numi_wirecell_apponly_split_overlay_intrinsic-checkpoint.xml  sbn_uboone_numi_wirecell_apponly_split_overlay_intrinsic-checkpoint.xml
